# Student_Homework_Assistant

./: .dockerignore  Dockerfile  README.md  main.py  prompts.py  pyproject.toml  utils.py
.github/: README.md
api/: chat.py
models/: chat.py
services/: chat_service.py
static/: app.js  index.html  script.js  style.css  styles.css
